src/test/resources/rules/fail/WhitespaceAround.java
package rules.fail;

public class WhitespaceAround {
    public void method() {
        Integer x= 5;
        x.byteValue();
    }
}
